kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-lab-ingress
  namespace: devops-lab

spec:
  ingressClassName: nginx

  rules:
    - host: ewandroproject.sytes.net
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
